--- a/Perfil-de-usuario-16-abril/style/style.css
+++ b/Perfil-de-usuario-16-abril/style/style.css
@@ -25,19 +25,20 @@ body{
             position: absolute;
             top: -200px;
             margin: 0 auto;
-            width: 300px;
-            height: 300px;
-            overflow: hidden;
+            width: 400px;
+            height: 400px;
+
         }
             #content-img .img-personal-float img{
-                width: 100%;
-                height: 300px;
+                width: 70%;
+                height: 70%;
                 border-radius: 300px;
+                border: 5px solid #ffffff;
 
             }
             #content-img .img-personal-float img:hover{
                 -webkit-transform:scale(1);
-                transform:scale(1.1);
+                transform:scale(1.3);
             }
             #content-img .img-personal-float h1{
                 text-align: center;
@@ -73,12 +74,13 @@ body{
             margin: 0 auto;
         } 
     #gallery{
-        width: 100%;
+        max-width: 1024px;
         display: flex;
         flex-wrap: wrap;
         gap: 20px;
         margin: 20px auto;
         justify-content: center;
+        align-items: center;
     }
         #gallery .box-gallery{
             width: 30%;
